--- a/public/frontend/css/style-login.css
+++ b/public/frontend/css/style-login.css
@@ -11,7 +11,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #7d2ae8;
+  background:  #d6c1d7;
   padding: 30px;
 }
 .container{
