--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -204,45 +204,6 @@ ol {
 	-webkit-animation: loader 0.8s linear infinite;
 }
 
-@keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
-
-@-webkit-keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
-
 .spacial-controls {
 	position: fixed;
 	width: 111px;
@@ -1934,11 +1895,11 @@ ol {
 
 
 /*---------------------
-  Footer
+Footer
 -----------------------*/
 
 .footer {
-	background: #111111;
+	background: #f0f0f0;
 	padding-top: 70px;
 }
 
@@ -1964,7 +1925,7 @@ ol {
 }
 
 .footer__widget h6 {
-	color: #ffffff;
+	color: #111111;
 	font-size: 15px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -1978,67 +1939,18 @@ ol {
 }
 
 .footer__widget ul li a {
-	color: #b7b7b7;
+	color: #111111;
 	font-size: 15px;
-}
-
-.footer__widget .footer__newslatter p {
-	color: #b7b7b7;
-}
-
-.footer__widget .footer__newslatter form {
-	position: relative;
-}
-
-.footer__widget .footer__newslatter form input {
-	width: 100%;
-	font-size: 15px;
-	color: #3d3d3d;
-	background: transparent;
-	border: none;
-	padding: 15px 0;
-	border-bottom: 2px solid #ffffff;
-}
-
-.footer__widget .footer__newslatter form input::-webkit-input-placeholder {
-	color: #3d3d3d;
-}
-
-.footer__widget .footer__newslatter form input::-moz-placeholder {
-	color: #3d3d3d;
-}
-
-.footer__widget .footer__newslatter form input:-ms-input-placeholder {
-	color: #3d3d3d;
-}
-
-.footer__widget .footer__newslatter form input::-ms-input-placeholder {
-	color: #3d3d3d;
-}
-
-.footer__widget .footer__newslatter form input::placeholder {
-	color: #3d3d3d;
-}
-
-.footer__widget .footer__newslatter form button {
-	color: #b7b7b7;
-	font-size: 16px;
-	position: absolute;
-	right: 5px;
-	top: 0;
-	height: 100%;
-	background: transparent;
-	border: none;
 }
 
 .footer__copyright__text {
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(62, 39, 35, 0.7);
 	padding: 20px 0;
 	margin-top: 40px;
 }
 
 .footer__copyright__text p {
-	color: #b7b7b7;
+	color: #111111;
 	margin-bottom: 0;
 }
 
@@ -2051,7 +1963,7 @@ ol {
 }
 
 /*---------------------
-  Breadcrumb
+Breadcrumb
 -----------------------*/
 
 .breadcrumb-option {
@@ -4100,7 +4012,7 @@ ol {
 }
 
 .primary-btn:hover {
-    background-color: #e55d50;
+    background-color: #FF3A85;
 }
 
 .continue__btn {
@@ -4121,7 +4033,7 @@ ol {
 
 .continue__btn a:hover,
 .update__btn a:hover {
-    background-color: #e55d50;
+    background-color: #FF3A85;
 }
 
 .update__btn a {
