--- a/public/frontend/css/style-login.css
+++ b/public/frontend/css/style-login.css
@@ -11,7 +11,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background:  #d6c1d7;
+  background:  #FF4DA3;
   padding: 30px;
 }
 .container{
@@ -48,6 +48,7 @@ body{
 .cover .back{
   transform: rotateY(180deg);
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 .container .cover::before,
 .container .cover::after{
@@ -55,7 +56,7 @@ body{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: #7d2ae8;
+  background: #FF3A85;
   opacity: 0.5;
   z-index: 12;
 }
@@ -119,7 +120,7 @@ body{
   bottom: 0;
   height: 3px;
   width: 25px;
-  background: #7d2ae8;
+  background: #FF4DA3;
 }
 .forms .signup-form  .title:before{
   width: 20px;
@@ -148,11 +149,11 @@ body{
 }
 .form-content .input-box input:focus,
 .form-content .input-box input:valid{
-  border-color: #7d2ae8;
+  border-color: #FF4DA3;
 }
 .form-content .input-box i{
   position: absolute;
-  color: #7d2ae8;
+  color: #FF4DA3;
   font-size: 17px;
 }
 .forms .form-content .text{
@@ -172,17 +173,17 @@ body{
 }
 .forms .form-content .button input{
   color: #fff;
-  background: #7d2ae8;
+  background: #FF4DA3;
   border-radius: 6px;
   padding: 0;
   cursor: pointer;
   transition: all 0.4s ease;
 }
 .forms .form-content .button input:hover{
-  background: #5b13b9;
+  background: #FF3A85;
 }
 .forms .form-content label{
-  color: #5b13b9;
+  color: #FF3A85;
   cursor: pointer;
 }
 .forms .form-content label:hover{
