--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -887,8 +887,8 @@ h1 {
 }
 
 .instagram__pic__item {
-	width: 750px;
-	height: 500px;
+	width: 650px;
+	height: 400px;
 	background-position: center center;
 }
 
@@ -938,7 +938,6 @@ h1 {
 	list-style: none;
 	display: inline-block;
 	margin-right: 88px;
-	cursor: pointer;
 }
 
 .filter__controls li:last-child {
@@ -2744,16 +2743,19 @@ Breadcrumb
 	padding: 30px 30px 25px;
 	margin: 0 30px;
 	margin-top: -35px;
-	background: #ffffff;
+	background: #f0f0f0;
 	-webkit-transition: all, 0.3s;
 	-o-transition: all, 0.3s;
 	transition: all, 0.3s;
+	-moz-transition: all, 0.3s;
+	-ms-transition: all, 0.3s;
 }
 
 .blog__item__text span {
 	color: #3d3d3d;
 	font-size: 13px;
 	display: block;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
@@ -3355,11 +3357,6 @@ Breadcrumb
 	.container {
 		max-width: 1170px;
 	}
-	.hero__items {
-        height: 450px; 
-        padding-top: 110px;
-        padding-bottom: 35px;
-    }
 }
 
 /* Medium Device = 1200px */
@@ -3403,11 +3400,6 @@ Breadcrumb
 		padding-top: 70px;
         padding-bottom: 25px;
 		right: -0.1%; 
-	}
-	.instagram__pic__item {
-		width: 100%;
-		height: 190px;
-		background-position: center center;
 	}
 	.header__menu ul li {
 		margin-right: 10px;
@@ -3477,11 +3469,6 @@ Breadcrumb
 /* Wide Mobile = 480px */
 
 @media only screen and (max-width: 767px) {
-	.instagram__pic__item {
-		width: 100%;
-		height: 190px;
-		background-position: center center;
-	}
 	.canvas__open {
 		display: block;
 		font-size: 22px;
@@ -3821,12 +3808,6 @@ Breadcrumb
 	.cart__total {
 		padding: 35px 30px 40px;
 	}
-	.hero__items {
-		width: 100%;          
-		height: 120;        
-		padding-top: 60px;    
-		padding-bottom: 20px; 
-	}	
 	.instagram__pic__item {
 		width: 100%;
 		height: 190px;
@@ -3966,9 +3947,9 @@ Breadcrumb
 }
 
 .categories__item__icon span {
-	color: #FF4DA3; /* Warna ikon */
-	font-size: 2rem; /* Mengurangi ukuran ikon */
-    margin-bottom: 5px; /* Mengurangi jarak antara ikon dan teks */
+	color: #FF4DA3; 
+	font-size: 2rem; 
+    margin-bottom: 5px; 
 	
 }
 .shop__sidebar__categories ul {
@@ -4236,8 +4217,8 @@ Breadcrumb
 		right: -0.1%; 
 	}
 	.instagram__pic__item {
-		width: 100%;
-		height: 190px;
+		width: 650px;
+		height: 400px;
 		background-position: center center;
 	}
     .history-content {
@@ -4257,8 +4238,8 @@ Breadcrumb
 @media (max-width: 576px) {
 	.hero__items {
 		width: 100%;
-        height: 190px; 
-        padding-top: 60px;
+        height: auto; 
+        padding-top: 100px;
         padding-bottom: 20px;
     }
 	.instagram__pic__item {
@@ -4279,10 +4260,6 @@ Breadcrumb
 }
 
 @media (max-width: 360px) {
-    .hero__image {
-		width: 100%;
-        height: 100px; 
-    }
 	.instagram__pic__item {
 		width: 100%;
 		height: 190px;
